--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,7 +352,7 @@ a.btn-main:hover {
 .grid {
     display: flex;
     flex-wrap: wrap;
-    max-height: 60vh;
+    height: 60vh;
     width: auto;
 }
 
