--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,13 +352,13 @@ a.btn-main:hover {
 .grid {
     display: flex;
     flex-wrap: wrap;
-    height: 60vh;
+    height: auto;
     width: auto;
 }
 
 .js-card {
     width: 23%;
-    max-height: 18%;
+    height: max-content;
     margin: 3px;
     box-shadow: 6px 6px 7px rgba(0,0,0,0.3);
 }
