--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,13 +352,13 @@ a.btn-main:hover {
 .grid {
     display: flex;
     flex-wrap: wrap;
-    height: auto;
+    max-height: 100vh;
     width: auto;
 }
 
 .js-card {
     width: 23%;
-    height: max-content;
+    max-height: 20%;
     margin: 3px;
     box-shadow: 6px 6px 7px rgba(0,0,0,0.3);
 }
@@ -562,6 +562,15 @@ a.btn-main:hover {
     #result {
         font-size: 1.375rem;
         line-height: 1.5rem;
+    }
+
+    .grid {
+    height: 60vh;
+}
+
+.js-card {
+    max-height: 18%;
+    margin: 2px;
     }
 }
 
